@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/appres
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/appres/ChangeLog,v 1.35 2007/10/09 09:12:54 dberkholz Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/appres/ChangeLog,v 1.36 2009/05/05 07:24:07 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org> appres-1.0.1.ebuild:
+  add empty IUSE entry to silence repoman
 
   09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>; -appres-1.0.0.ebuild:
   Drop old ebuilds.
